Java version changed to the latest 21 LTS version. BellSoft Liberica is now used as JDK including JFX. Dependencies updated. Fixed a bug in DirectoryUtilsTest. Test for changing directory permissions only works on unix-based operating systems, because it uses PosixFilePermission. The maven build process has been optimized. The requirements section in the README.md have been revised.